@@ -11,62 +11,6 @@ plugins {
 }
 
 kotlin {
-    tasks.withType<JavaExec> { jvmArgs("--enable-native-access=ALL-UNNAMED") }
-    jvm {
-        compilerOptions { jvmTarget = JvmTarget.JVM_22 }
-        compilations {
-            val main by getting
-
-            val mainClassName = (findProperty("jvm.mainClass") as? String)?.plus("Kt")
-            if (mainClassName == null) {
-                project.logger.log(
-                    LogLevel.ERROR,
-                    "Property 'jvm.mainClass' has either changed or has not been set. Check 'gradle.properties' and ensure it is properly set!"
-                )
-            }
-            tasks {
-                register<Copy>("copyResources") {
-                    group = "package"
-                    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-                    dependsOn(named("jvmProcessResources"))
-                    from(main.output.resourcesDir)
-                    destinationDir = File("${layout.buildDirectory.asFile.get()}/publish")
-                }
-                register<Jar>("packageFatJar") {
-                    group = "package"
-                    archiveClassifier.set("all")
-                    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-                    dependsOn(named("jvmJar"))
-                    dependsOn(named("copyResources"))
-                    manifest { attributes["Main-Class"] = mainClassName }
-                    destinationDirectory.set(File("${layout.buildDirectory.asFile.get()}/publish/"))
-                    from(
-                        main.runtimeDependencyFiles.map { if (it.isDirectory) it else zipTree(it) },
-                        main.output.classesDirs
-                    )
-                    doLast {
-                        logger.lifecycle(
-                            "[LittleKt] The packaged jar is available at: ${outputs.files.first().parent}"
-                        )
-                    }
-                }
-                if (Os.isFamily(Os.FAMILY_MAC)) {
-                    register<JavaExec>("jvmRun") {
-                        jvmArgs("-XstartOnFirstThread")
-                        mainClass.set(mainClassName)
-                        kotlin {
-                            val mainCompile = targets["jvm"].compilations["main"]
-                            dependsOn(mainCompile.compileAllTaskName)
-                            classpath(
-                                { mainCompile.output.allOutputs.files },
-                                (configurations["jvmRuntimeClasspath"])
-                            )
-                        }
-                    }
-                }
-            }
-        }
-    }
     js {
         binaries.executable()
         browser {
@@ -100,8 +44,7 @@ kotlin {
                 implementation(kotlin("test"))
             }
         }
-        val jvmMain by getting
-        val jvmTest by getting
+
         val jsMain by getting {
             dependencies {
                 implementation(libs.kotlinx.html.js)
